# sistema-solar

./: CMakeLists.txt  Camera.cpp  Camera.h  Matrizes.cpp  README.md  Vetores.cpp  main.cpp  teste
shaders/: triangle_frag.glsl  triangle_vert.glsl
